[bumpversion]
current_version = 0.7.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<stage>[^.]*)\.(?P<devnum>\d+))?
serialize = 
	{major}.{minor}.{patch}-{stage}.{devnum}
	{major}.{minor}.{patch}-{stage}
	{major}.{minor}.{patch}

[bumpversion:part:stage]
first_value = dev
values = 
	dev
	rc

[bumpversion:part:devnum]
first_value = 0

[bumpversion:file:package.json]

[flake8]
max-line-length = 100
ignore = E203,W503

[tool:isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 100
multi_line_output = 3
use_parentheses = True

[options]
packages = find:
